# TestAlgebra

./: pyproject.toml
test_algebra/: test_abc.py
