[tool.poetry]
name = "test-algebra"
version = "0.1.0"
description = ""
authors = ["Chulsoon Patrick Yang <patrick.yang.1248@gmail.com>"]
readme = "README.md"
packages = [{include = "test_algebra"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
